--- a/films.html
+++ b/films.html
@@ -45,24 +45,24 @@
 					<tr>
 						<td><a href="Categories/Anime/MainAnime.html">Аниме</a></td>
 
-						<td><a href="#">Биография</a></td>
+						<td><a href="Categories/Anime/MainBio.html">Биография</a></td>
 					</tr>
 
 					<tr>
-						<td><a href="#">Комедия</a></td>
+						<td><a href="Categories/Anime/MainComedy.html">Комедия</a></td>
 
-						<td><a href="#">Документальное</a><td>
+						<td><a href="Categories/Anime/MainDoc.html">Документальное</a><td>
 					</tr>
 
 					<tr>
-						<td><a href="#">Ужасы</a></td>
+						<td><a href="Categories/Anime/MainHor.html">Ужасы</a></td>
 
-						<td><a href="#">Боевик</a></td>						
+						<td><a href="Categories/Anime/MainBoevik.html">Боевик</a></td>						
 					</tr>
 
 					<tr>
-						<td><a href="#">Драма</a></td>
-						<td><a href="#">Мультфильмы</a></td>
+						<td><a href="Categories/Anime/MainDrama.html">Драма</a></td>
+						<td><a href="Categories/Anime/MainMult.html">Мультфильмы</a></td>
 					</tr>
 				</table>
 			</div>
