--- a/FilmNews/ono.html
+++ b/FilmNews/ono.html
@@ -27,7 +27,7 @@
 <div class="title">
 	<div class="mid">
 		<div class="tit">
-				<h1>Афиша<h1>
+				<h1>Новости<h1>
 		</div>
 	</div>
 </div>
@@ -39,19 +39,17 @@
 	<div class="content">
 		<div class="mid">
 			<div class="contentPages">
-						<table  border-collapse: collapse; border: 2px solid white; width="1000" cellspacing="20" cellpadding="20">
+				<table  border-collapse: collapse; border: 2px solid white; width="1000" cellspacing="20" cellpadding="20">
 				<caption><h1>Сиквел "Оно" выйдет в 2019 году<h1/></caption>
 
 
 <tr>
-
-	<td><img src = "images/news/it.jpg" width="400"  height="500"  ></td>
-
-
-	<td>Киностудия Warner Bros. анонсировала прокатный график продолжения фильма ужасов "Оно". Как сообщает издание The Hollywood Reporter, сиквел будет представлен зрителям 6 сентября 2019 года. В этом "прокатном окне" у картины пока нет прямых конкурентов.
+	<td><img src = "images/news/it.jpg" width="400" height="500"  ></td>
+	<td>
+							Киностудия Warner Bros. анонсировала прокатный график продолжения фильма ужасов "Оно". Как сообщает издание The Hollywood Reporter, сиквел будет представлен зрителям 6 сентября 2019 года. В этом "прокатном окне" у картины пока нет прямых конкурентов.
 	На момент написания данной заметки не было известно, вернется ли в режиссерское кресло создатель первого фильма Андрес Мускетти, получивший сразу несколько перспективных предложений после успешного старта "Оно" в прокате. В частности, он считался основным претендентом на пост режиссера приквела "Дракулы", который собиралась снимать киностудия Paramount. Сценарий продолжения "Оно" подготовит Гари Доберман.
 	Напомним, что экранизация одноименного произведения Стивена Кинга установила в американском и мировом прокатах целую серию абсолютных рекордов. Картина продемонстрировала лучший старт среди проектов своего жанра, а также лучший старт сентябрьского проката. В дальнейшем "Оно" стало самым успешным фильмом ужасов.
-	Актерский состав сиквела "Оно: Часть 2" также пока не уточнялся. Вероятнее всего, речь в нем пройдет о еще одном столкновении с монстром подросших героев первой серии.</td>
+	Актерский состав сиквела "Оно: Часть 2" также пока не уточнялся. Вероятнее всего, речь в нем пройдет о еще одном столкновении с монстром подросших героев первой серии.</font></td>
 </tr>
 </table>
 
@@ -63,7 +61,7 @@
 
 					<tr>
 						<td><img src = "images/news/spider.jpg" width="100" height="125"  > </td>
-						<td width="300"><h2><a href="spidy.html">"Человек-паук" стал самой кассовой экранизацией комиксов 2017 года</a></h2></td>
+						<td  width="300"><h2><a href="spidy.html">"Человек-паук" стал самой кассовой экранизацией комиксов 2017 года</a></h2></td>
 
 						<td><table border="1px" width="1px" height="200px"></table></td>
 
@@ -94,3 +92,4 @@
 
 </body>
 </html>
+
