--- a/FilmNews/tor.html
+++ b/FilmNews/tor.html
@@ -11,7 +11,7 @@
 		<div class="mid">
 			<header>
 				<div class="topmenu">
-						<a href="../main.html">Главная</a>
+						<a href="../index.html">Главная</a>
 						<a href="../cinema.html">Что в кино?</a>
 						<a href="../films.html">Фильмы</a>
 				</div>
@@ -27,7 +27,7 @@
 <div class="title">
 	<div class="mid">
 		<div class="tit">
-				<h1>Афиша<h1>
+				<h1>Новости<h1>
 		</div>
 	</div>
 </div>
@@ -60,10 +60,10 @@
 <caption><h1>Другие новости<h1/></caption>
 					<tr>
 						<td><img src = "images/news/it.jpg" width="100" height="125"  > </td>
-						<td  width="300"><h2><a href="it.html">Сиквел "Оно" выйдет в 2019 году</a></h2></td>
+						<td  width="300"><h2><a href="ono.html">Сиквел "Оно" выйдет в 2019 году</a></h2></td>
 						<td ><table border="1px" width="1px" height="200px"></table></td>						
 						<td><img src = "images/news/spider.jpg" width="100" height="125"  > </td>
-						<td  width="300"><h2><a href="tor.html">"Человек-паук" стал самой кассовой экранизацией комиксов 2017 года</a></h2></td>
+						<td  width="300"><h2><a href="ono.html">"Человек-паук" стал самой кассовой экранизацией комиксов 2017 года</a></h2></td>
 
 </tr>
 
