--- a/FilmInfo/itcinema.html
+++ b/FilmInfo/itcinema.html
@@ -11,7 +11,7 @@
 		<div class="mid">
 			<header>
 				<div class="topmenu">
-						<a href="../main.html">Главная</a>
+						<a href="../index.html">Главная</a>
 						<a href="../cinema.html">Что в кино?</a>
 						<a href="../films.html">Фильмы</a>
 				</div>
