--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="shortcut icon" type="image/x-icon" href="images/logo.png">
 <link rel="stylesheet" type="text/css" href="style.css" >
 </head>
-<body>
+<body style="color:white;">
 	<div class="header">
 		<div class="mid">
 			<header>
@@ -23,11 +23,45 @@
 <div class="title">
 	<div class="mid">
 		<div class="tit">
-				<font color="white"><h1>Новости кино<h1></font> 
-
+				 <h1>Новости</h1>
 		</div>
 	</div>
 </div>
+
+
+
+
+	<div class="content">
+		<div class="mid">
+			<div class="contentMain">
+
+				<table border="0" width="800" cellspacing="20">
+					
+					<tr>
+						<td><img src = "FilmNews/images/news/it.jpg" width="200" height="250"  ></td>
+							<td><h2><a href="FilmNews/ono.html">Сиквел "Оно" выйдет в 2019 году</a></h2> 
+						Киностудия Warner Bros. анонсировала прокатный график продолжения фильма ужасов "Оно". Как сообщает издание The Hollywood Reporter, сиквел будет представлен зрителям 6 сентября 2019 года.</td>
+	</tr>
+
+
+
+					<tr>
+						<td><img src = "FilmNews/images/news/spider.jpg" width="200" height="250"  > </td>
+						<td><h2><a href="FilmNews/spidy.html">"Человек-паук" стал самой кассовой экранизацией комиксов 2017 года</a></h2>
+							Фильм "Человек-паук: Возвращение домой" стал самым кассовым фильмом 2017 года из снятых по комиксам. На прошедших выходных благодаря успешному прокату в Китае его мировые кассовые сборы превысили 874 миллиона долларов.</td>
+
+</tr>
+<tr>
+									<td><img src = "FilmNews/images/news/disney.jpg" width="200" height="250"  > </td>
+									<td><h2><a href="FilmNews/tor.html">Брэнд Walt Disney вошел в рейтинг самых дорогих в мире</a></h2>Компания Interbrand представила ежегодный рейтинг самых дорогих брэндов мира. Как свидетельствуют результаты ее исследования, 15 место в нем занял брэнд Walt Disney, который оценивается в 40 миллиардов долларов.</td>
+</tr>
+
+</table>
+
+			</div>
+		</div>
+	</div>
+
 
 
 
@@ -36,13 +70,11 @@
 
 
 	<div class="footer">
-		<div class="mid">
-			<footer>
-				
-			</footer>
-			
-		</div>
+
 	</div>
 
-</body>
+
+	</body>
 </html>
+
+
