--- a/glass/aboutcmp.html
+++ b/glass/aboutcmp.html
@@ -26,10 +26,10 @@
 		<div class="mid">
 			<header>
 				<div class="topmenu">
-						<input type="button" value="Главная"  class='active'  onclick="javascript:window.location='index.html'"/>
+						<input type="button" value="Главная"    onclick="javascript:window.location='index.html'"/>
 						<input type="button" value="Услуги" onclick="javascript:window.location='uslugi.html'"/>
 						<input type="button" value="Наличие" onclick="javascript:window.location='nalichie.html'"/>
-						<input type="button" value="О компании" onclick="javascript:window.location='aboutcmp.html'"/>
+						<input type="button" value="О компании" class='active' onclick="javascript:window.location='aboutcmp.html'"/>
 						<input type="button" value="Связаться" onclick="javascript:window.location='contacts.html'"/>
 
 				</div>
@@ -47,8 +47,7 @@
 		<div class="mid">
 			<div class="contentMain">
 
-				Здесь должна быть какая то информация
-
+здесь информация о компании
 			</div>
 		</div>
 	</div>
@@ -73,5 +72,3 @@
 
 	</body>
 </html>
-
-
