--- a/glass/contacts.html
+++ b/glass/contacts.html
@@ -26,11 +26,11 @@
 		<div class="mid">
 			<header>
 				<div class="topmenu">
-						<input type="button" value="Главная"  class='active'  onclick="javascript:window.location='index.html'"/>
+						<input type="button" value="Главная"   onclick="javascript:window.location='index.html'"/>
 						<input type="button" value="Услуги" onclick="javascript:window.location='uslugi.html'"/>
 						<input type="button" value="Наличие" onclick="javascript:window.location='nalichie.html'"/>
 						<input type="button" value="О компании" onclick="javascript:window.location='aboutcmp.html'"/>
-						<input type="button" value="Связаться" onclick="javascript:window.location='contacts.html'"/>
+						<input type="button" value="Связаться" class='active' onclick="javascript:window.location='contacts.html'"/>
 
 				</div>
 						<img src="images/LOGOHEAD.png" alt="FilmNews" title="На главную">
@@ -47,7 +47,7 @@
 		<div class="mid">
 			<div class="contentMain">
 
-				Здесь должна быть какая то информация
+				Здесь адрес контакты и так далее
 
 			</div>
 		</div>
@@ -73,5 +73,3 @@
 
 	</body>
 </html>
-
-
