--- a/glass/nalichie.html
+++ b/glass/nalichie.html
@@ -26,9 +26,9 @@
 		<div class="mid">
 			<header>
 				<div class="topmenu">
-						<input type="button" value="Главная"  class='active'  onclick="javascript:window.location='index.html'"/>
+						<input type="button" value="Главная"   onclick="javascript:window.location='index.html'"/>
 						<input type="button" value="Услуги" onclick="javascript:window.location='uslugi.html'"/>
-						<input type="button" value="Наличие" onclick="javascript:window.location='nalichie.html'"/>
+						<input type="button" value="Наличие" class='active' onclick="javascript:window.location='nalichie.html'"/>
 						<input type="button" value="О компании" onclick="javascript:window.location='aboutcmp.html'"/>
 						<input type="button" value="Связаться" onclick="javascript:window.location='contacts.html'"/>
 
@@ -47,7 +47,7 @@
 		<div class="mid">
 			<div class="contentMain">
 
-				Здесь должна быть какая то информация
+				А здесь информация о наличии товаров
 
 			</div>
 		</div>
@@ -73,5 +73,3 @@
 
 	</body>
 </html>
-
-
