--- a/cinema.html
+++ b/cinema.html
@@ -34,14 +34,16 @@
 	<div class="content">
 		<div class="mid">
 			<div class="contentcinema">
-				<table>
+				<table >
 					<tr>
-						<td><a href="FilmInfo/itcinema.html"><img src = "FilmInfo/images/cinema/it/it.jpg" width="360" height="510" class="rightimg" ></a></td>
-						<td><a href="FilmInfo/babyondrive.html"><img src = "FilmInfo/images/cinema/baby/main.jpg" width="360" height="510" class="rightimg"></a></td>
+						<td><a href="FilmInfo/itcinema.html"><img src = "FilmInfo/images/cinema/it/it.jpg" width="100%" ></a></td>
+						<td align="center" valign="center"><a href="FilmInfo/babyondrive.html"><img src = "FilmInfo/images/cinema/baby/main.jpg" width="100%"></a></td>
+						<td align="center" valign="center"><a href="FilmInfo/logan.html"><img src="FilmInfo/images/cinema/logan/main.jpg" width="100%"></a></td>
+						<td align="center" valign="center"><a href="FilmInfo/brad.html"><img src="FilmInfo/images/cinema/brad/main.jpg " width="100%"></a></td>
 </tr>
 <tr>
-						<td><a href="FilmInfo/logan.html"><img src="FilmInfo/images/cinema/logan/main.jpg" width="360" height="510" class="rightimg"></a></td>
-						<td><a href="FilmInfo/brad.html"><img src="FilmInfo/images/cinema/brad/main.jpg " width="360" height="510"></a></td>
+						<td align="center" valign="center"><a href="FilmInfo/logan.html"><img src="FilmInfo/images/cinema/logan/main.jpg" width="100%"></a></td>
+						<td align="center" valign="center"><a href="FilmInfo/brad.html"><img src="FilmInfo/images/cinema/brad/main.jpg " width="100%"></a></td>
 						</tr>
 
 </table>
