--- a/films.html
+++ b/films.html
@@ -27,7 +27,7 @@
 <div class="title">
 	<div class="mid">
 		<div class="tit">
-				<font color="white"><h1>Афиша<h1></font> 
+				<h1>Афиша<h1>
 		</div>
 	</div>
 </div>
