--- a/glass/index.html
+++ b/glass/index.html
@@ -20,6 +20,39 @@
 	}
 </style>
 
+<script type="text/javascript">
+  var total_pics_num = 4; // колличество изображений
+  var interval = 5000;    // задержка между изображениями
+  var time_out = 1;       // задержка смены изображений
+  var i = 0;
+  var timeout;
+  var opacity = 100;
+  function fade_to_next() {
+    opacity--;
+    var k = i + 1;
+    var image_now = 'image_' + i;
+    if (i == total_pics_num) k = 1;
+    var image_next = 'image_' + k;
+    document.getElementById(image_now).style.opacity = opacity/100;
+    document.getElementById(image_now).style.filter = 'alpha(opacity='+ opacity +')';
+    document.getElementById(image_next).style.opacity = (100-opacity)/100;
+    document.getElementById(image_next).style.filter = 'alpha(opacity='+ (100-opacity) +')';
+    timeout = setTimeout("fade_to_next()",time_out);
+    if (opacity==1) {
+      opacity = 100;
+      clearTimeout(timeout);
+    }
+  }
+  setInterval (
+    function() {
+      i++;
+      if (i > total_pics_num) i=1;
+      fade_to_next();
+    }, interval
+  );
+</script>
+
+
 </head>
 <body style="color:black;">
 	<div class="header">
@@ -47,8 +80,10 @@
 		<div class="mid">
 			<div class="contentMain">
 
-				Здесь должна быть какая то информация
-
+  <img src='slide_1.jpg' id="image_1"  height="80%" style="position: absolute;left: 20%" />
+  <img src='slide_2.jpg' id="image_2" height = 80% style="opacity: 0; filter: alpha(opacity=0); position: absolute;" />
+  <img src='slide_3.jpg' id="image_3"  height = 80% style="opacity: 0; filter: alpha(opacity=0); position: absolute;" />
+  <img src='slide_4.jpg' id="image_4"  height = 80% style="opacity: 0; filter: alpha(opacity=0); position: absolute;" />
 			</div>
 		</div>
 	</div>
