--- a/FilmInfo/itcinema.html
+++ b/FilmInfo/itcinema.html
@@ -32,18 +32,18 @@
 <div class="content">
 		<div class="mid">
 			<div class="contentCinemaFilms">
-				<table border="0" width="1000" cellspacing="20" cellpadding="20">
+				<table  cellspacing="20" cellpadding="20">
 					<caption><h2>Оно<h2/></caption>
 						<tr>
-							<td > <iframe width="560" height="315" src="https://www.youtube.com/embed/CA1HY_C9uHo" frameborder="0" allowfullscreen></iframe></td>
-							<td><img src = "images/cinema/it/it.jpg" width="260"  height="315"  ></td>
+							<td width="70%" align="center"> <iframe width="560" height="315" src="https://www.youtube.com/embed/CA1HY_C9uHo" frameborder="0" allowfullscreen></iframe></td>
+							<td width="30%" align="center"><img src = "images/cinema/it/it.jpg" width="80%"></td>
 						</tr>
 						<tr>
 							<td colspan="2">Когда в городке Дерри, штат Мэн, начинают пропадать дети, несколько ребят сталкиваются со своими величайшими страхами и вынуждены помериться силами со злобным клоуном Пеннивайзом, чьи проявления жестокости и список жертв уходят в глубь веков.</td>
 						</tr>
 						<tr>
 							<td><b>Дата выхода:</b> 7 сентября 2017 г. (РФ)</td>
-							<td><b>Жанр:</b> <a href="#">Драма</a>, <a href="#">Ужасы</a></td>
+							<td><b>Жанр:</b> <a href="../Categories/Drama/MainDram.html">Драма</a>, <a href="../Categories/Horror/MainHor.html">Ужасы</a></td>
 						</tr>
 						
 						<tr>
