--- a/FilmInfo/itcinema.html
+++ b/FilmInfo/itcinema.html
@@ -23,7 +23,7 @@
 <div class="title">
 	<div class="mid">
 		<div class="tit">
-				<h1>Афиша<h1>
+				<h1>Оно<h1>
 		</div>
 	</div>
 </div>
@@ -33,10 +33,10 @@
 		<div class="mid">
 			<div class="contentCinemaFilms">
 				<table  cellspacing="20" cellpadding="20">
-					<caption><h2>Оно<h2/></caption>
+					
 						<tr>
-							<td width="70%" align="center"> <iframe width="560" height="315" src="https://www.youtube.com/embed/CA1HY_C9uHo" frameborder="0" allowfullscreen></iframe></td>
-							<td width="30%" align="center"><img src = "images/cinema/it/it.jpg" width="80%"></td>
+							<td width="60%" align="center"> <iframe width="100%" height="300%" src="https://www.youtube.com/embed/CA1HY_C9uHo" frameborder="0" allowfullscreen></iframe></td>
+							<td width="40%" align="center"><img src = "images/cinema/it/it.jpg" width="100%"></td>
 						</tr>
 						<tr>
 							<td colspan="2">Когда в городке Дерри, штат Мэн, начинают пропадать дети, несколько ребят сталкиваются со своими величайшими страхами и вынуждены помериться силами со злобным клоуном Пеннивайзом, чьи проявления жестокости и список жертв уходят в глубь веков.</td>
