--- a/FilmInfo/itcinema.html
+++ b/FilmInfo/itcinema.html
@@ -32,28 +32,30 @@
 <div class="content">
 		<div class="mid">
 			<div class="contentCinemaFilms">
-				<table  cellspacing="20" cellpadding="20">
+				<table >
 					
-						<tr>
-							<td width="60%" align="center"> <iframe width="100%" height="300%" src="https://www.youtube.com/embed/CA1HY_C9uHo" frameborder="0" allowfullscreen></iframe></td>
-							<td width="40%" align="center"><img src = "images/cinema/it/it.jpg" width="100%"></td>
+						<tr height="50%">
+							<td width="60%" > <iframe width="100%" src="https://www.youtube.com/embed/CA1HY_C9uHo" frameborder="0" allowfullscreen></iframe></td>
+							<td width="40%" align="center"><img src = "images/cinema/it/it.jpg"  ></td>
 						</tr>
 						<tr>
-							<td colspan="2">Когда в городке Дерри, штат Мэн, начинают пропадать дети, несколько ребят сталкиваются со своими величайшими страхами и вынуждены помериться силами со злобным клоуном Пеннивайзом, чьи проявления жестокости и список жертв уходят в глубь веков.</td>
+							<td  colspan="2">Когда в городке Дерри, штат Мэн, начинают пропадать дети, несколько ребят сталкиваются со своими величайшими страхами и вынуждены помериться силами со злобным клоуном Пеннивайзом, чьи проявления жестокости и список жертв уходят в глубь веков.</td>
 						</tr>
+					</table>
+					<table>
 						<tr>
-							<td><b>Дата выхода:</b> 7 сентября 2017 г. (РФ)</td>
-							<td><b>Жанр:</b> <a href="../Categories/Drama/MainDram.html">Драма</a>, <a href="../Categories/Horror/MainHor.html">Ужасы</a></td>
+							<td width="50%"><b>Дата выхода:</b> 7 сентября 2017 г. (РФ)</td>
+							<td width="50%"><b>Жанр:</b> <a href="../Categories/Drama/MainDram.html">Драма</a>, <a href="../Categories/Horror/MainHor.html">Ужасы</a></td>
 						</tr>
 						
 						<tr>
-							<td><b>Страны:</b> США, Канада</td>
-							<td><b>Режиссёр:</b> Андрес Мускетти</td>
+							<td width="50%"><b>Страны:</b> США, Канада</td>
+							<td width="50%"><b>Режиссёр:</b> Андрес Мускетти</td>
 						</tr>
 
 						<tr>
-							<td><b>Музыка:</b> Бенджамин Уоллфиш</td>
-							<td><b>Длительность:</b> 135 мин.</td>
+							<td width="50%"><b>Музыка:</b> Бенджамин Уоллфиш</td>
+							<td width="50%"><b>Длительность:</b> 135 мин.</td>
 						</tr>
 				</table>
 			</div>
