--- a/FilmInfo/itcinema.html
+++ b/FilmInfo/itcinema.html
@@ -34,14 +34,16 @@
 			<div class="contentCinemaFilms">
 				<table >
 					
-						<tr height="50%">
-							<td width="60%" > <iframe width="100%" src="https://www.youtube.com/embed/CA1HY_C9uHo" frameborder="0" allowfullscreen></iframe></td>
+						<tr>
+							<td width="60%" align="center"> <iframe 	height="200%" width="70%" src="https://www.youtube.com/embed/CA1HY_C9uHo" frameborder="0" allowfullscreen></iframe></td>
 							<td width="40%" align="center"><img src = "images/cinema/it/it.jpg"  ></td>
 						</tr>
+
 						<tr>
-							<td  colspan="2">Когда в городке Дерри, штат Мэн, начинают пропадать дети, несколько ребят сталкиваются со своими величайшими страхами и вынуждены помериться силами со злобным клоуном Пеннивайзом, чьи проявления жестокости и список жертв уходят в глубь веков.</td>
+							<td  colspan="2"><h2>Когда в городке Дерри, штат Мэн, начинают пропадать дети, несколько ребят сталкиваются со своими величайшими страхами и вынуждены помериться силами со злобным клоуном Пеннивайзом, чьи проявления жестокости и список жертв уходят в глубь веков.<</td>
 						</tr>
 					</table>
+					<hr>
 					<table>
 						<tr>
 							<td width="50%"><b>Дата выхода:</b> 7 сентября 2017 г. (РФ)</td>
