--- a/FilmInfo/itcinema.html
+++ b/FilmInfo/itcinema.html
@@ -35,7 +35,7 @@
 				<table >
 					
 						<tr>
-							<td width="60%" align="center"> <iframe 	height="200%" width="70%" src="https://www.youtube.com/embed/CA1HY_C9uHo" frameborder="0" allowfullscreen></iframe></td>
+							<td width="60%" align="center"> <iframe 	height="200%" width="90%" src="https://www.youtube.com/embed/CA1HY_C9uHo" frameborder="0" allowfullscreen></iframe></td>
 							<td width="40%" align="center"><img src = "images/cinema/it/it.jpg"  ></td>
 						</tr>
 
@@ -44,7 +44,7 @@
 						</tr>
 					</table>
 					<hr>
-					<table>
+					<table cellspacing="5px">
 						<tr>
 							<td width="50%"><b>Дата выхода:</b> 7 сентября 2017 г. (РФ)</td>
 							<td width="50%"><b>Жанр:</b> <a href="../Categories/Drama/MainDram.html">Драма</a>, <a href="../Categories/Horror/MainHor.html">Ужасы</a></td>
@@ -59,6 +59,7 @@
 							<td width="50%"><b>Музыка:</b> Бенджамин Уоллфиш</td>
 							<td width="50%"><b>Длительность:</b> 135 мин.</td>
 						</tr>
+						
 				</table>
 			</div>
 		</div>
