--- a/cinema.html
+++ b/cinema.html
@@ -36,10 +36,9 @@
 			<div class="contentcinema">
 				<table >
 					<tr>
-						<td><a href="FilmInfo/itcinema.html"><img src = "FilmInfo/images/cinema/it/it.jpg" width="100%" ></a></td>
+						<td align="center" valign="center"><a href="FilmInfo/itcinema.html"><img src = "FilmInfo/images/cinema/it/it.jpg" width="100%" ></a></td>
 						<td align="center" valign="center"><a href="FilmInfo/babyondrive.html"><img src = "FilmInfo/images/cinema/baby/main.jpg" width="100%"></a></td>
-						<td align="center" valign="center"><a href="FilmInfo/logan.html"><img src="FilmInfo/images/cinema/logan/main.jpg" width="100%"></a></td>
-						<td align="center" valign="center"><a href="FilmInfo/brad.html"><img src="FilmInfo/images/cinema/brad/main.jpg " width="100%"></a></td>
+
 </tr>
 <tr>
 						<td align="center" valign="center"><a href="FilmInfo/logan.html"><img src="FilmInfo/images/cinema/logan/main.jpg" width="100%"></a></td>
