--- a/FilmInfo/itcinema.html
+++ b/FilmInfo/itcinema.html
@@ -36,7 +36,7 @@
 					
 						<tr>
 							<td width="60%" align="center"> <iframe 	height="200%" width="90%" src="https://www.youtube.com/embed/CA1HY_C9uHo" frameborder="0" allowfullscreen></iframe></td>
-							<td width="40%" align="center"><img src = "images/cinema/it/it.jpg"  ></td>
+							<td width="40%" align="center"><img height="100%" src = "images/cinema/it/it.jpg"  ></td>
 						</tr>
 
 						<tr>
