--- a/FilmInfo/babyondrive.html
+++ b/FilmInfo/babyondrive.html
@@ -23,7 +23,7 @@
 <div class="title">
 	<div class="mid">
 		<div class="tit">
-				<h1>Афиша<h1>
+				<h1>Малыш на драйве<h1>
 		</div>
 	</div>
 </div>
@@ -32,28 +32,30 @@
 <div class="content">
 		<div class="mid">
 			<div class="contentCinemaFilms">
-				<table border="0" width="1000" cellspacing="20" cellpadding="20">
-					<caption><h2>Малыш на драйве<h2/></caption>
+				<table>
 						<tr>
-							<td > <iframe width="560" height="315" src="https://www.youtube.com/embed/HGGdKX9ByTE" frameborder="0" allowfullscreen></iframe></td>
-							<td><img src =  "images/cinema/baby/main.jpg" width="260"  height="315"  ></td>
+							<td width="60%" align="center"> <iframe 	height="200%" width="90%" src="https://www.youtube.com/embed/HGGdKX9ByTE" frameborder="0" allowfullscreen></iframe></td>
+							<td width="40%" align="center"><img height="100%" src =  "images/cinema/baby/main.jpg"></td>
 						</tr>
 						<tr>
-							<td colspan="2">Молодой парень по прозвищу Малыш обожает стильную музыку, быструю езду и адреналин в крови. Вся его жизнь – это сплошные погони и перестрелки, ведь он работает водителем, который помогает бандитам скрыться с места преступления. Однажды он по-настоящему влюбляется и решает выйти из игры, но сначала ему предстоит выполнить еще одно задание, которое вполне может оказаться последним в его жизни.</td>
+							<td colspan="2"><h2>Молодой парень по прозвищу Малыш обожает стильную музыку, быструю езду и адреналин в крови. Вся его жизнь – это сплошные погони и перестрелки, ведь он работает водителем, который помогает бандитам скрыться с места преступления. Однажды он по-настоящему влюбляется и решает выйти из игры, но сначала ему предстоит выполнить еще одно задание, которое вполне может оказаться последним в его жизни.</h2></td>
 						</tr>
+					</table>
+					<hr>
+					<table cellspacing="5px">
 						<tr>
-							<td><b>Дата выхода:</b> 24 августа 2017 г. (РФ)</td>
-							<td><b>Жанр:</b> <a href="#">Боевик</a>, <a href="#">Комедия</a></td>
+							<td width="50%"><b>Дата выхода:</b> 24 августа 2017 г. (РФ)</td>
+							<td width="50%"><b>Жанр:</b> <a href="#">Боевик</a>, <a href="#">Комедия</a></td>
 						</tr>
 						
 						<tr>
-							<td><b>Страны:</b> Великобритания, США</td>
+							<td width="50%"><b>Страны:</b> Великобритания, США</td>
 							<td><b>Режиссёр:</b> Эдгар Райт</td>
 						</tr>
 
 						<tr>
-							<td><b>Музыка:</b> Стивен Прайс</td>
-							<td><b>Длительность:</b> 112 мин.</td>
+							<td width="50%"><b>Музыка:</b> Стивен Прайс</td>
+							<td width="50%"><b>Длительность:</b> 112 мин.</td>
 						</tr>
 				</table>
 			</div>
