--- a/FilmInfo/brad.html
+++ b/FilmInfo/brad.html
@@ -33,27 +33,29 @@
 		<div class="mid">
 			<div class="contentCinemaFilms">
 				<table border="0" width="1000" cellspacing="20" cellpadding="20">
-					<caption><h2>Статус Брэда<h2/></caption>
 						<tr>
-							<td > <iframe width="560" height="315" src="https://www.youtube.com/embed/zBRC6XzsoSY" frameborder="0" allowfullscreen></iframe></td>
-							<td><img src =  "images/cinema/brad/main.jpg" width="260"  height="315"  ></td>
+							<td width="60%" align="center"> <iframe 	height="200%" width="90%" src="https://www.youtube.com/embed/zBRC6XzsoSY" frameborder="0" allowfullscreen></iframe></td>
+							<td width="40%" align="center"><img height="100%" src =  "images/cinema/brad/main.jpg" ></td>
 						</tr>
 						<tr>
-							<td colspan="2">У Брэда есть все, чтобы быть счастливым. Но, когда он встречает более успешных друзей детства, которые обставили его по всем статьям, он чувствует себя полным лузером.</td>
+							<td colspan="2"><h2>У Брэда есть все, чтобы быть счастливым. Но, когда он встречает более успешных друзей детства, которые обставили его по всем статьям, он чувствует себя полным лузером.</h2></td>
 						</tr>
+					</table>
+					<hr>
+					<table cellspacing="5px">
 						<tr>
-							<td><b>Дата выхода:</b> 14 сентября 2017 г. (РФ)</td>
-							<td><b>Жанр:</b> <a href="#">Комедия</a>, <a href="#">Драма</a></td>
+							<td width="50%"><b>Дата выхода:</b> 14 сентября 2017 г. (РФ)</td>
+							<td width="50%"><b>Жанр:</b> <a href="#">Комедия</a>, <a href="#">Драма</a></td>
 						</tr>
 						
 						<tr>
-							<td><b>Страна:</b> США</td>
-							<td><b>Режиссёр:</b> Майк Уайт</td>
+							<td width="50%"><b>Страна:</b> США</td>
+							<td width="50%"><b>Режиссёр:</b> Майк Уайт</td>
 						</tr>
 
 						<tr>
-							<td><b>Музыка:</b> Марк Мазерсбо</td>
-							<td><b>Длительность:</b> 101 мин.</td>
+							<td width="50%"><b>Музыка:</b> Марк Мазерсбо</td>
+							<td width="50%"><b>Длительность:</b> 101 мин.</td>
 						</tr>
 				</table>
 			</div>
