--- a/FilmInfo/itcinema.html
+++ b/FilmInfo/itcinema.html
@@ -40,7 +40,7 @@
 						</tr>
 
 						<tr>
-							<td  colspan="2"><h2>Когда в городке Дерри, штат Мэн, начинают пропадать дети, несколько ребят сталкиваются со своими величайшими страхами и вынуждены помериться силами со злобным клоуном Пеннивайзом, чьи проявления жестокости и список жертв уходят в глубь веков.<</td>
+							<td colspan="2"><h2>Когда в городке Дерри, штат Мэн, начинают пропадать дети, несколько ребят сталкиваются со своими величайшими страхами и вынуждены помериться силами со злобным клоуном Пеннивайзом, чьи проявления жестокости и список жертв уходят в глубь вековю</td>
 						</tr>
 					</table>
 					<hr>
