--- a/dasha/firstQuestion/leisure.html
+++ b/dasha/firstQuestion/leisure.html
@@ -7,6 +7,7 @@
 	<div class="Zagolovok">
 	<h2>Развлечения</h2>
 	</div>
+	<div class="content">
 	<div class="contentLeisure">
 		<p>Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац
 		Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац
@@ -14,6 +15,8 @@
 			<p>Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац
 		Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац
 	Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац</p>
-	<img src="image.jpg" width="30%">
+<div class="imageLeisure">	<img src="image.jpg" width="200px" align="center"></div>
+	</div>
+	</div>
 </body>
 </html>
