--- a/dasha/firstQuestion/aboutMe.html
+++ b/dasha/firstQuestion/aboutMe.html
@@ -7,6 +7,7 @@
 	<div class="Zagolovok">
 	<h2>Обо мне</h2>
 	</div>
+	<div class="content">
 	<div class="contentAboutMe">
 		<p>Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац
 		Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац
@@ -14,7 +15,8 @@
 			<p>Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац
 		Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац
 	Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац</p>
-	<img src="image.jpg" width="30%">
+	<div class="imageAbout"><img src="image.jpg" width="30%"></div>
+	</div>
 	</div>
 </body>
 </html>
