--- a/dasha/firstQuestion/friends.html
+++ b/dasha/firstQuestion/friends.html
@@ -7,6 +7,7 @@
 	<div class="Zagolovok">
 	<h2>Друзья</h2>
 	</div>
+	<div class="content">
 	<div class="contentFriends">
 		<p>Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац
 		Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац
@@ -14,7 +15,8 @@
 			<p>Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац
 		Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац
 	Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац</p>
-	<img src="image.jpg" width="30%">
+	<div class="imageFriends"><img src="image.jpg" width="200"></div>
+	</div>
 	</div>
 </body>
 </html>
