--- a/dasha/firstQuestion/myFamily.html
+++ b/dasha/firstQuestion/myFamily.html
@@ -7,10 +7,12 @@
 	<div class="Zagolovok">
 	<h2>Моя семья</h2>
 	</div>
+	<div class="content">
 	<div class="contentMyFamily">
 		<p >Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзацЗдесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац </p>
 		<p >Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзацЗдесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац Здесь должен быть абзац</p>
-		<img src="image.jpg" width="30%">
+		<div class="imageMyFam"><img src="image.jpg" width="30%"></div>
+		</div>
 	</div>
 </body>
 </html>
