--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
 <title>FilmNews</title>
 <meta charset="utf-8">
+
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
 <link rel="shortcut icon" type="image/x-icon" href="images/logo.png">
 <link rel="stylesheet" type="text/css" href="style.css" >
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body style="color:white;">
 	<div class="header">
@@ -26,62 +31,83 @@
 		</div>
 	</div>
 </div>
+
 <div class="mid">
 	<div class="contentMain">
-		<table>
-			<tr>
-				<td><select id="category"></select></td>
-				<td><select id="country"></select></td>
+
+<div class="container">
+  <br>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" ></li>
+      <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+      <div class="item ">
+        <img src="Categories/all/images/mainimg/salut7.jpg" alt="Салют 7" >
+        <div class="carousel-caption">
+        	          <h2><a href="salut.html">Салют 7 в кино</a></h2>
+        	                  <p><h3>Космическая станция «Салют-7», находящаяся на орбите в беспилотном режиме, неожиданно перестает отвечать на сигналы центра управления полетом. Принято решение об отправке на орбиту спасательной экспедиции. Космический экипаж должен найти «мертвую» станцию и впервые в мире провести стыковку с 20-тонной глыбой неуправляемого железа.</h3></p>
+
+        </div>
+      </div>
+ 
+      <div class="item active">
+        <img src="Categories/all/images/mainimg/snegovik.jpg" alt="Снеговик" ">
+        <div class="carousel-caption">
+        	        	          <h2><a href="salut.html">Снеговик в кино</a></h2>
+        	        	          <p><h3>В течение многих лет в день, когда выпадает первый снег, бесследно исчезают замужние женщины. Сложить все части загадочного пазла под силу только знаменитому детективу. Он потерял покой и сон, ведь время следующего снегопада неумолимо приближается.</h3></p>
+
+        </div>
+      </div>
+ 
+      <div class="item">
+        <img src="Categories/all/images/mainimg/liga.jpg" alt="Лига справедливости">
+        <div class="carousel-caption">
+        	       <h2><a href="salut.html">Лига справедливости в кино</a></h2>
+        	       <p><h3>Брюс Уэйн, вдохновленный самопожертвованием Супермена, вновь обретает веру в человечество. Он заручается поддержкой новой союзницы, Дианы Принс, чтобы сразиться с еще более могущественным противником. Бэтмен и Чудо-Женщина быстро набирают команду сверхлюдей для борьбы с пробудившейся угрозой.</h3></p>
+
+
+        </div>
+      </div>
+ 
+      <div class="item">
+        <img src="Categories/all/images/mainimg/ubiystvo.jpg" alt="Flower" width="460" height="345">
+        <div class="carousel-caption">
+         <h2><a href="salut.html">Убийство в восточном экспрессе в кино</a></h2>
+         <p><h3>Путешествие на одном из самых роскошных поездов Европы неожиданно превращается в одну из самых стильных и захватывающих загадок в истории.</h3></p>
+
+        </div>
+      </div> 
+    </div>
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+
+
+
+				<h2>Случайный фильм</h2>
+				<table><tr><td align="center"></td><td align="center"><input align="center" type="button" id="button" value="Ещё фильм" /></td></tr></table>
 				
-				<td><select id="year"></select></td>
-				<td><input type="button" id="button" value="Зарандомить" /></td>
-			</tr>
-		</table>
-
-		<script type="text/javascript">
-
-var objSel1 = document.getElementById("category");
-objSel1.options[0] = new Option("Категории", "str0");
-objSel1.options[1] = new Option("Комедия", "str1");
-objSel1.options[2] = new Option("Биография", "str2");
-
-var objSel2 = document.getElementById("country");
-objSel2.options[0] = new Option("Страна", "str0");
-objSel2.options[1] = new Option("Россия", "str1");
-objSel2.options[2] = new Option("Сша", "str2");
-
-var objSel3 = document.getElementById("year");
-objSel3.options[0] = new Option("Год", "str0");
-objSel3.options[1] = new Option("2015-2018", "str1");
-objSel3.options[2] = new Option("2010-2015", "str2");
-
-
-button.onclick = function() {
-	alert("Приветики,а теперь вали ,пельмень")
-/*if ( objSel.selectedIndex ==0)
-{
-	var a = 100;
-
-	alert(Math.floor(Math.random() * (a - 1 + 1)) + 1);
-  //Если есть выбранный элемент, отобразить его значение (свойство value)
- // alert(objSel.options[objSel.selectedIndex].value);
-
-}
-if( objSel.selectedIndex ==1){
-	alert(horror);
-  };*/
-}
-db=openDatabase("SQLite/randomfilm.bd3","0.1","randomfilm",2000000);
-if(!db){
-	alert("Failed");
-}
-db.transaction(function(tx) {
-tx.executeSql("SELECT * FROM random WHERE id = '1'", [], function(tx, result) {
-for(var i = 0; i < result.rows.length; i++) {
-document.write('<b>' + result.rows.item(i)['text'] + '</b><br />');
-}}, null)}); </script>
+		<div id="info" class="contentCinemaFilms"></div>
+		<script src="script.js"></script>
 	</div>
 </div>
+
+
+
+
+
 
 
 
