--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <link rel="stylesheet" type="text/css" href="style.css" >
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="jq.js"></script>
+  <script src="boot.js"></script>
 </head>
 <body style="color:white;">
 	<div class="header">
