--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="shortcut icon" type="image/x-icon" href="images/logo.png">
 <link rel="stylesheet" type="text/css" href="style.css" >
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="st.css">
   <script src="jq.js"></script>
   <script src="boot.js"></script>
 </head>
