--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <link rel="shortcut icon" type="image/x-icon" href="images/logo.png">
 <link rel="stylesheet" type="text/css" href="style.css" >
+  <link rel="stylesheet" href="st.css">
   <script src="jq.js"></script>
   <script src="boot.js"></script>
 </head>
