--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 	<div class="contentMain">
 
 <div class="container">
+
   <br>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -45,6 +46,12 @@
       <li data-target="#myCarousel" data-slide-to="3"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
+      <div class="button">
+              <img align="left"  src="images/left.png">
+                            <img align="right"  src="images/right.png">
+
+              </div>
+
       <div class="item ">
         <img src="Categories/all/images/mainimg/salut7.jpg" alt="Салют 7" >
         <div class="carousel-caption">
