--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <img src="Categories/all/images/mainimg/salut7.jpg" alt="Салют 7" >
         <div class="carousel-caption">
         	          <h2><a href="salut.html">Салют 7 в кино</a></h2>
-        	                  <p><h3>Космическая станция «Салют-7», находящаяся на орбите в беспилотном режиме, неожиданно перестает отвечать на сигналы центра управления полетом. Принято решение об отправке на орбиту спасательной экспедиции. Космический экипаж должен найти «мертвую» станцию и впервые в мире провести стыковку с 20-тонной глыбой неуправляемого железа.</h3></p>
+        	                  <p>Космическая станция «Салют-7», находящаяся на орбите в беспилотном режиме, неожиданно перестает отвечать на сигналы центра управления полетом. Принято решение об отправке на орбиту спасательной экспедиции. Космический экипаж должен найти «мертвую» станцию и впервые в мире провести стыковку с 20-тонной глыбой неуправляемого железа.</p>
 
         </div>
       </div>
@@ -65,7 +65,7 @@
         <img src="Categories/all/images/mainimg/snegovik.jpg" alt="Снеговик" ">
         <div class="carousel-caption">
         	        	          <h2><a href="salut.html">Снеговик в кино</a></h2>
-        	        	          <p><h3>В течение многих лет в день, когда выпадает первый снег, бесследно исчезают замужние женщины. Сложить все части загадочного пазла под силу только знаменитому детективу. Он потерял покой и сон, ведь время следующего снегопада неумолимо приближается.</h3></p>
+        	        	          <p>В течение многих лет в день, когда выпадает первый снег, бесследно исчезают замужние женщины. Сложить все части загадочного пазла под силу только знаменитому детективу. Он потерял покой и сон, ведь время следующего снегопада неумолимо приближается.</p>
 
         </div>
       </div>
@@ -74,7 +74,7 @@
         <img src="Categories/all/images/mainimg/liga.jpg" alt="Лига справедливости">
         <div class="carousel-caption">
         	       <h2><a href="salut.html">Лига справедливости в кино</a></h2>
-        	       <p><h3>Брюс Уэйн, вдохновленный самопожертвованием Супермена, вновь обретает веру в человечество. Он заручается поддержкой новой союзницы, Дианы Принс, чтобы сразиться с еще более могущественным противником. Бэтмен и Чудо-Женщина быстро набирают команду сверхлюдей для борьбы с пробудившейся угрозой.</h3></p>
+        	       <p>Брюс Уэйн, вдохновленный самопожертвованием Супермена, вновь обретает веру в человечество. Он заручается поддержкой новой союзницы, Дианы Принс, чтобы сразиться с еще более могущественным противником. Бэтмен и Чудо-Женщина быстро набирают команду сверхлюдей для борьбы с пробудившейся угрозой.</p>
 
 
         </div>
@@ -84,7 +84,7 @@
         <img src="Categories/all/images/mainimg/ubiystvo.jpg" alt="Flower" width="460" height="345">
         <div class="carousel-caption">
          <h2><a href="salut.html">Убийство в восточном экспрессе в кино</a></h2>
-         <p><h3>Путешествие на одном из самых роскошных поездов Европы неожиданно превращается в одну из самых стильных и захватывающих загадок в истории.</h3></p>
+         <p>Путешествие на одном из самых роскошных поездов Европы неожиданно превращается в одну из самых стильных и захватывающих загадок в истории.</p>
 
         </div>
       </div> 
