--- a/cinema.html
+++ b/cinema.html
@@ -11,10 +11,13 @@
 		<div class="mid">
 			<header>
 				<div class="topmenu">
+					 <input id="TextIn" style="color: black"  type="text" />
+<input id="submit" type="image" src="images/search.png">
 						<a href="index.html">Главная</a>
 						<a href="cinema.html">Что в кино?</a>
 						<a href="films.html">Фильмы</a>
 				</div>
+
 					<img src="images/LOGOHEAD.png" alt="FilmNews" title="На главную">
 			</header>
 		</div>
@@ -32,7 +35,12 @@
 
 	<div class="content">
 		<div class="mid">
+
 			<div class="contentcinema">
+				 
+				 
+
+
 				<table >
 					<tr>
 						<td align="center" ><a href="FilmInfo/itcinema.html"><img src = "FilmInfo/images/cinema/it/it.jpg" width="100%" ></a></td>
