--- a/films.html
+++ b/films.html
@@ -11,6 +11,8 @@
 		<div class="mid">
 			<header>
 				<div class="topmenu">
+					 	<input id="TextIn" style="color: black"  type="text" />
+						<input id="submit" type="image" src="images/search.png">
 						<a href="index.html">Главная</a>
 						<a href="cinema.html">Что в кино?</a>
 						<a href="films.html">Фильмы</a>
@@ -40,6 +42,13 @@
 <div class="content">
 		<div class="mid">
 			<div class="contentCategories">
+				<div class="search">
+				 	<p></p>
+				 					 	<p></p>
+
+				 					<table id="table"></table>
+				    <script src="search.js"></script>
+				 </div>
 
 				<table >
 					<tr>
