--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 		<div class="mid">
 			<header>
 				<div class="topmenu">
-						<a href="index.html">Главная</a>
+                  <input id="TextIn" style="color: black"  type="text" />
+<input id="submit" type="image" src="images/search.png">
+		<a href="index.html">Главная</a>
 						<a href="cinema.html">Что в кино?</a>
 						<a href="films.html">Фильмы</a>
 				</div>
-					<img src="images/LOGOHEAD.png" alt="FilmNews" title="На главную">
+					<img src="images/LOGOHEAD.png" alt="FilmNews">
 			</header>
 		</div>
 	</div>
@@ -34,8 +36,11 @@
 
 <div class="mid">
 	<div class="contentMain">
+    <div id="search"></div>
 
 <div class="container">
+  <p id="found"></p>
+  <table id="table"></table>
 
   <br>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -69,6 +74,8 @@
         </div>
       </div>
  
+    <script src="search.js"></script>
+
       <div class="item">
         <img src="Categories/all/images/mainimg/liga.jpg" alt="Лига справедливости">
         <div class="carousel-caption">
