--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
 
 <div class="mid">
 	<div class="contentMain">
-    <div id="search"></div>
 
 <div class="container">
-  <p id="found"></p>
-  <table id="table"></table>
+<div class="search">
+                    <p></p>
 
+                  <table id="table"></table>
+            <script src="search.js"></script>
+         </div>
   <br>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -74,7 +76,6 @@
         </div>
       </div>
  
-    <script src="search.js"></script>
 
       <div class="item">
         <img src="Categories/all/images/mainimg/liga.jpg" alt="Лига справедливости">
