--- a/cinema.html
+++ b/cinema.html
@@ -38,7 +38,12 @@
 
 			<div class="contentcinema">
 				 
-				 
+				 <div class="search">
+                    <p></p>
+
+                  <table id="table"></table>
+            <script src="search.js"></script>
+         </div>
 
 
 				<table >
@@ -63,6 +68,7 @@
 	<div class="footer">
 		<div class="mid">
 			<footer>
+msgcloud2@gmail.com
 
 			</footer>
 			
