--- a/1/index.html
+++ b/1/index.html
@@ -10,7 +10,7 @@
 	<button id="but" >______________________НАЖМИ НА МЕНЯ_____________________</button>
 	<script type="text/javascript">
 but.onclick = function sear(){
-	alert("Пошли смотреть сериал, цмок")
+	alert("ОБИДНО!!!, цмок");
 }
 	</script>
 </body>
