--- a/1/index.html
+++ b/1/index.html
@@ -7,11 +7,13 @@
 <link rel="stylesheet" type="text/css" href="style.css" >
 </head>
 <body>
+	<div width="100">
 	<button id="but" >______________________НАЖМИ НА МЕНЯ_____________________</button>
 	<script type="text/javascript">
 but.onclick = function sear(){
 	alert("хорошо, цмок");
 }
 	</script>
+	</div>
 </body>
 </html>
