--- a/BetaBeginner/index.html
+++ b/BetaBeginner/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -17,7 +19,7 @@
         <img src="images/LOGOHEAD.png" alt="FilmNews" width="13%" valign="bottom ">
         <div class="topmenu">
           <a href="#">Я работодатель</a>
-          <a href="#">Войти</a>
+          <a href="registration.html">Войти</a>
 				</div>
 			</header>
 		</div>
