--- a/BetaBeginner/registration.html
+++ b/BetaBeginner/registration.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 <title>РЕГИСТРАЦИЯ</title>
-<meta charset="utf-8">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="shortcut icon" type="image/x-icon" href="images/logo.bmp">
 <link rel="stylesheet" type="text/css" href="style.css" >
