--- a/BetaBeginner/index.html
+++ b/BetaBeginner/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -19,7 +17,7 @@
         <img src="images/LOGOHEAD.png" alt="FilmNews" width="13%" valign="bottom ">
         <div class="topmenu">
           <a href="#">Я работодатель</a>
-          <a href="registration.html">Войти</a>
+          <a href="#">Войти</a>
 				</div>
 			</header>
 		</div>
