--- a/BetaBeginner/registration.html
+++ b/BetaBeginner/registration.html
@@ -28,6 +28,7 @@
 		</div>
 	</div>
 
+<div class="window">
 <div class="Check">
   <h3 align="center">Регистрация</h3>
   <p>
@@ -109,7 +110,7 @@
   <a href="#" onclick="check()">Готово</a>
 </div>
 </div>
-
+</div>
 
 
 
