--- a/BetaBeginner/index.html
+++ b/BetaBeginner/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>ГЛАВНАЯ</title>
-<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
 
 <link rel="shortcut icon" type="image/x-icon" href="images/logo.bmp">
@@ -16,35 +16,32 @@
 			<header >
         <img src="images/LOGOHEAD.png" alt="FilmNews" width="13%" valign="bottom ">
         <div class="topmenu">
-          <a href="#">Я работодатель</a>
           <a href="#">Войти</a>
 				</div>
 			</header>
 		</div>
 	</div>
 <div class="midS">
-  <div class = "searcher">
+  <div class = "searcher" width="100%">
       <table >
 
         <tr>
 
-          <td width="14%">
-Поиск вакансий
+          <td width="35%" >
+            <a href="#">Я работодатель</a>
+
           </td>
 
-          <td width = "50%">
+          <td width = "40%">
             <div class="hyb">
             <input  id="TextIn"  type="text" placeholder="Введите" />
           </div>
           </td>
-          <td width = "4.5%">
-            <input id="submit" type="image" src="images/findbut.png" >
+          <td width = "25%">
+            <input id="submit" type="image" src="images/findbut.png" align="left">
+            <input id="settings" type="image" src="images/setbut.bmp" >
           </td>
-          <td width = "4.5%">
-            <input id="settings" type="image" src="images/setbut.bmp">
-          </td>
-          <td width="27%">
-          </td>
+
 
 
         </tr>
