--- a/BetaBeginner/registration.html
+++ b/BetaBeginner/registration.html
@@ -22,17 +22,25 @@
 			<header >
         <img src="images/LOGOHEAD.png" alt="FilmNews" width="13%" valign="bottom">
         <div class="topmenu">
-          <a href="#">Назад</a>
+          <table >
+          <tr>
+            <td ><a href="index.html">На главную</a></td>
+            <td><a href="login.html">Войти</a></td>
+
+        </tr>
+        </table>
 				</div>
 			</header>
 		</div>
 	</div>
 
 <div class="window">
-<div class="Check">
+<div class="Check" align="center">
   <h3 align="center">Регистрация</h3>
 
-<table width="100%">
+<table width="80%">
+  <tbody id="RadioTab">
+
     <tr>
       <td align="center">
         <label class="radio">
@@ -50,7 +58,7 @@
 
 
 
-
+</tbody>
 </table>
 </div>
 <p>
